# integration_core

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/config/: global_map_vis.example.yaml  mcmot.config.yaml
docs/: CORE_WORKFLOW.md  DEPLOYMENT.md  EDGE_COMM_ADAPTER.md  ENV.md  PIPELINE_SUMMARY.md
scripts/: print_config_summary.py
src/integration/api/: event_store.py  http_server.py
src/integration/comm/: __init__.py  base.py  factory.py  http_adapter.py  messaging.py  mqtt_adapter.py
src/integration/config/: __init__.py  manager.py  settings.py  visualization.py
src/integration/mcmot/: README.md  __init__.py
src/integration/mcmot/config/: loader.py  manager.py  schema.py
src/integration/mcmot/core/coordinate/: __init__.py  base_mapper.py  coordinate_transformer.py  homography_mapper.py  tps_mapper.py
src/integration/mcmot/core/mcmot/: assignment_matcher.py  cost_matrix.py  expiring_dict.py  gallery.py  loss_functions.py  models.py  object_processor.py  record_service.py  trajectory_analyzer.py  trajectory_matcher.py  trajectory_utils.py
src/integration/mcmot/services/: mcmot_coordinator.py
src/integration/mcmot/utils/: logger.py  zone_utils.py
src/integration/mcmot/visualization/: map_overlay.py
src/integration/pipeline/: README.md  events.py  pipeline.py  registry.py  schedule.py  scheduler.py
src/integration/pipeline/control/: __init__.py  phase_change.py  phase_engine.py  phase_publishers.py  phase_task.py  scheduler.py
src/integration/pipeline/selectors/: base.py  default.py
src/integration/pipeline/tasks/: __init__.py  base.py  phase.py  plugin_loader.py  summary.py
src/integration/pipeline/tasks/nodes/: __init__.py
src/integration/pipeline/tasks/nodes/event_dispatch/: __init__.py  engine.py  task.py
src/integration/pipeline/tasks/nodes/formatting/: __init__.py  engine.py  expect_output.py  models.py  (+1 more)
src/integration/pipeline/tasks/non_working/: update.py
src/integration/pipeline/tasks/pipelines/: __init__.py  mcmot_pipeline.py
src/integration/pipeline/tasks/working/: pipeline.py
src/integration/runtime/: config_summary.py  edge_runtime.py  health_runtime.py
src/integration/storage/: state.py
src/integration/utils/: paths.py
src/integration/visualization/: __init__.py  global_map_renderer.py
tests/: conftest.py  test_config_manager.py  test_ingestion_new_data.py  test_matching_broadcast_engine.py  test_matching_broadcast_task.py  test_mcmot_adapter.py  test_phase_broadcast_toggle.py  test_pipeline_summary.py  test_plugin_loader.py  test_task_plugin_init.py
(+23 files in other folders)
