[project]
name = "integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.10",
    "numpy==1.26",
    "shapely>=2.0",
    "fastdtw>=0.3.4",
    "pykalman>=0.9.5",
    "loguru>=0.7",
    "scipy>=1.11",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "torch>=2.3",
    "python-dotenv>=0.21.0",
    "paho-mqtt>=1.6.1",
    "smart-workflow @ git+https://github.com/allenshie/smart-workflow.git@346a65f87394d0fe39b8761734447940b901ab62",
    "smart-messaging-core @ git+https://github.com/allenshie/smart_messaging_core.git@9dcfcf2bdc816eb4ef37910b00e33b9f96e88065",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
