[project]
name = "integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.10",
    "numpy==1.26",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "python-dotenv>=0.21.0",
    "paho-mqtt>=1.6.1",
    "smart-workflow @ git+https://github.com/allenshie/smart-workflow.git@b5ef4c4dbab3525a5dc1c5f1c7eb689da5baf6ee",
    "MCMOT @ git+ssh://git@github.com/ChenPingChen/MCMOT.git@793a087a17f6981aa8f7dbf14e38693e2ae7071e",
    "smart-messaging-core==0.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
